--- a/themes/raiser/sass/layouts/_campaign.scss
+++ b/themes/raiser/sass/layouts/_campaign.scss
@@ -105,6 +105,10 @@
     }
 
     h2 { display: none; }
+
+    .field-type-datetime {
+      margin-left: em(16);
+    }
   }
 
   #block-bean-social-media-links {
