--- a/themes/raiser/sass/components/_fundraise-workflow.scss
+++ b/themes/raiser/sass/components/_fundraise-workflow.scss
@@ -5,9 +5,28 @@
 }
 
 .page-redhen-campaign-add-general,
-.page-redhen-campaign-page,
+.page-redhen-campaign-page-edit,
 .page-redhen-campaign-page-add,
 .page-redhen-campaign-edit {
+  #content {
+    @include box-shadow(0 3px 5px $gray);
+    background: $white;
+    overflow: hidden;
+    position: relative;
+    margin-top:  1.5em;
+    .redhen_campaign_title {
+      display: none;
+    }
+  }
+  .main-content-wrapper {
+    @include zen-grid-item(12,1);
+    background: $white;
+
+    .page__title,
+    .form-item-field-banner-image-und-0-fid {
+      display: none;
+    }
+  }
 
   h2#page-title {
     display: block;
@@ -20,11 +39,21 @@
 
   legend {
     color: $black;
+    font-weight: bold;
+    width: 100%;
+    border-bottom: 2px solid $black;
+  }
+  .field-type-datetime legend {
+    font-weight: normal;
+    border-bottom: none;
   }
 
   fieldset {
     border: none;
     padding-left: 0;
+    padding-bottom: 0;
+    margin-left: 0;
+    margin-top: em(32);
   }
 
   .fieldset-description {
@@ -99,6 +128,7 @@
 
   .form-actions {
     clear:both;
+    margin-top: em(24);
   }
   fieldset[id^="edit-field-story-und-0-format"] {
     font-size: em(14);
@@ -128,7 +158,4 @@
 
 }
 
-#redhen-campaign-page-add-form {
-    width: 66.6%;
-}
 
