--- a/themes/raiser/sass/components/_sidebar.scss
+++ b/themes/raiser/sass/components/_sidebar.scss
@@ -1,7 +1,9 @@
 
 .sidebar-first > .region-sidebar-first {
-  width: 95%;
-  padding: 0;
+  @include medium {
+    width: 95%;
+    padding: 0;
+  } 
 }
 .region-sidebar-first {
   padding: 0;
